Addibf string fragments into routes

--- a/site/fragments/home.html
+++ b/site/fragments/home.html
@@ -1,4 +1,5 @@
-Home
+<h1>Home</h1>
 <div>
-    <a href="#component/toast">Go toast</a>
+    <li><a href="#component/badge">Badges</a></li>
+    <li><a href="#component/toast">Toast</a></li>
 </div>
