--- a/site/fragments/layout.html
+++ b/site/fragments/layout.html
@@ -1,2 +1,2 @@
-<div id="navigationArea">Navegacion</div>
-<div id="contentArea">Contenido</div>
+<div id="navigationArea"></div>
+<div id="contentArea"></div>
