--- a/site/fragments/components/site-badge.html
+++ b/site/fragments/components/site-badge.html
@@ -2,3 +2,63 @@
 <div>
     <a href="#home">Go home</a>
 </div>
+
+<div class="apc-badge apc-error">
+	<div class="apc-header">Atention!</div>
+	<div class="apc-body">This is the message shown in an error badge</div>
+	<div class="apc-footer">This is the footer of the badge</div>
+</div>
+
+<div class="apc-badge apc-warn">
+	<div class="apc-header">Warning!</div>
+	<div class="apc-body">This is the message shown in a warning badge</div>
+	<div class="apc-footer">This is the footer of the badge</div>
+</div>
+
+<div class="apc-badge apc-info">
+	<div class="apc-header">Information</div>
+	<div class="apc-body">This is the message shown in an informational badge</div>
+	<div class="apc-footer">This is the footer of the badge</div>
+</div>
+
+<div class="apc-badge apc-success">
+	<div class="apc-header">Success!</div>
+	<div class="apc-body">This is the message shown in a success badge</div>
+	<div class="apc-footer">This is the footer of the badge</div>
+</div>
+
+<div class="apc-badge apc-info">
+	<div class="apc-closing"><button>&nbsp;</button></div>
+	<div class="apc-header">This is a Badge with a Long title that is expanded and may consume a considerable area. Will be visually correct? Will it be responsive and maintain consistency?</div>
+	<div class="apc-body">
+		What happens when the badge has long content? How is the interaction between the different elements contained in the badge? 
+		This example allows to demonstrate the behavior when the badge has extended content and it requires to expand his area.
+		What is the responsive capacity of this component? Feel free to adjust your screen size and simulate a small factor device.
+	</div>
+	<div class="apc-footer">This is the footer of the badge</div>
+</div>
+
+<div class="apc-badge apc-error">
+	<div class="apc-icon">&nbsp;</div>
+	<div class="apc-header">Atention!</div>
+	<div class="apc-body">Example with an icon</div>
+</div>
+
+<div class="apc-badge apc-warn">
+	<div class="apc-icon">&nbsp;</div>
+	<div class="apc-header">Warning!</div>
+	<div class="apc-body">Example with an icon</div>
+</div>
+
+<div class="apc-badge apc-info">
+	<div class="apc-icon">&nbsp;</div>
+	<div class="apc-header">Information</div>
+	<div class="apc-body">Example with an icon</div>
+</div>
+
+<div class="apc-badge apc-success">
+	<div class="apc-icon">&nbsp;</div>
+	<div class="apc-header">Success!</div>
+	<div class="apc-body">Example with an icon</div>
+</div>
+
