--- a/site/fragments/site-home.html
+++ b/site/fragments/site-home.html
@@ -1,5 +1,6 @@
 <h1>Home</h1>
 <div>
+    <li><a href="#component/box">Box</a></li>
     <li><a href="#component/badge">Badges</a></li>
     <li><a href="#component/toast">Toast</a></li>
 </div>
