--- a/site/fragments/site-home.html
+++ b/site/fragments/site-home.html
@@ -3,4 +3,5 @@
     <li><a href="#component/box">Box</a></li>
     <li><a href="#component/badge">Badges</a></li>
     <li><a href="#component/toast">Toast</a></li>
+    <li><a href="#component/dialog">Dialogs</a></li>
 </div>
