Visual adjustments and new release

--- a/site/css/apice-samples.css
+++ b/site/css/apice-samples.css
@@ -7,7 +7,7 @@
 
 body {
     margin: 0;
-    background-color: #EAF3FA;
+    background-color: #ffffff;
 }
 
 /* Navigation bar with a dark accent */
