--- a/site/fragments/site-home.html
+++ b/site/fragments/site-home.html
@@ -1,4 +1,22 @@
-<h1>Home</h1>
+
+<div class="apc-hero apc-main-hero">
+	<div class="apc-content">
+		<div class="apc-header">
+			A swiss army knife to develop the front-end for enterprise web applications
+		</div>
+		<div class="apc-body">
+			The framework that is intended to ease your front-end work without deviating you from the
+			standards and giving you the control to use it in collaboration with your favorite CSS 
+			frameworks.
+		</div>
+		<div>
+			<button class="apc-button apc-primary">Quick Start</button>
+		</div>
+	</div>
+	<div class="apc-image">
+		<img src="./site/images/home-main-hero.jpg">
+	</div>
+</div>
 <div>
     <li><a href="#component/box">Box</a></li>
     <li><a href="#component/badge">Badges</a></li>
