--- a/site/fragments/site-home.html
+++ b/site/fragments/site-home.html
@@ -1,19 +1,21 @@
 
 <div class="apc-hero apc-main-hero">
 	<div class="apc-content">
-		<div class="apc-header">
-			A swiss army knife to develop the front-end for enterprise web applications
+		<div class="apc-header apc-primary-text">
+			A web UI framework to develop enterprise-grade applications
 		</div>
 		<div class="apc-body">
-			The framework that is intended to ease your front-end work without deviating you from the
-			standards and giving you the control to use it in collaboration with your favorite CSS 
-			frameworks.
+			Apice is intended to ease your front-end development without deviating you 
+			from the standards and giving you the control to use it in collaboration with 
+			your favorite CSS frameworks.
 		</div>
-		<div>
-			<button class="apc-button apc-primary">Quick Start</button>
+		<div class="apc-footer">
+			<a class="apc-button apc-lg apc-primary" href="#docs">Get Started</a>
 		</div>
 	</div>
 	<div class="apc-image">
-		<img src="./site/images/home-main-hero.jpg">
+		<div class="apc-image-frame">
+			<img src="./site/images/home-main-hero.png">
+		</div>
 	</div>
 </div>
