--- a/site/fragments/site-topbar.html
+++ b/site/fragments/site-topbar.html
@@ -1,3 +1,7 @@
-<nav class="dark">
-    <h1>Apice Framework</h1>
-</nav>
+<div class="apc-container">
+	<a href="#"><h1>Apice Framework</h1></a>
+	<div class="top-menu">
+		<div><a href="#">Home</a></div>
+		<div><a href="#docs">Documentation</a></div>
+	</div>
+</div>
